refactor(core): simplificar domínio e extrações utilitárias + testes focados de serviço
- Extract  (util) para centralizar regras de listagem/ordenação/tag case-insensitive.
- Refactor  e  para contratos claros (upload/rename/list/get/delete).
- Ajusta  e  (campos e índices).
- Converte erros de chave duplicada em  (409) no .
- Alinha , ,  e  (auto-criação de índices).
- Atualiza  e .
- Substitui dobles antigos por  e .
- Adiciona  com cenários de negócio (dup filename, dup hash, rename, list public).
- Remove ,  e  (desacoplamento e menos ruído).

Impacto: código mais enxuto, regras de negócio explícitas, testes rápidos e focados, build estável.