@@ -2,11 +2,13 @@ package com.digitalarkcorp.filestorage.infrastructure.mongo;
 
 import com.digitalarkcorp.filestorage.api.dto.SortBy;
 import com.digitalarkcorp.filestorage.api.dto.SortDir;
+import com.digitalarkcorp.filestorage.api.errors.ConflictException;
 import com.digitalarkcorp.filestorage.domain.FileMetadata;
 import com.digitalarkcorp.filestorage.domain.FileStatus;
 import com.digitalarkcorp.filestorage.domain.Visibility;
 import com.digitalarkcorp.filestorage.domain.ports.MetadataRepository;
 import com.digitalarkcorp.filestorage.infrastructure.mongo.model.FileMetadataDocument;
+import org.springframework.dao.DuplicateKeyException;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.MongoTemplate;
@@ -16,9 +18,6 @@ import org.springframework.data.mongodb.core.query.Query;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
-import java.util.stream.Collectors;
-
-import static com.digitalarkcorp.filestorage.infrastructure.mongo.model.FileMetadataDocument.Fields.*;
 
 public class MongoFileMetadataRepository implements MetadataRepository {
 
@@ -30,14 +29,20 @@ public class MongoFileMetadataRepository implements MetadataRepository {
 
     @Override
     public FileMetadata save(FileMetadata m) {
-        FileMetadataDocument d = toDoc(m);
-        if (d.getTags() != null) {
-            d.setTagsNorm(d.getTags().stream()
-                    .map(s -> s == null ? null : s.toLowerCase(Locale.ROOT))
-                    .toList());
+        try {
+            FileMetadataDocument d = toDoc(m);
+            // normalize tags into tagsNorm (lowercase) for filtering/sorting
+            if (d.getTags() != null) {
+                d.setTagsNorm(d.getTags().stream()
+                        .map(s -> s == null ? null : s.toLowerCase(Locale.ROOT))
+                        .toList());
+            }
+            FileMetadataDocument saved = template.save(d);
+            return toDomain(saved);
+        } catch (DuplicateKeyException dke) {
+            // your ConflictException only accepts (String)
+            throw new ConflictException("Duplicate key for unique constraint.");
         }
-        FileMetadataDocument saved = template.save(d);
-        return toDomain(saved);
     }
 
     @Override
@@ -48,58 +53,62 @@ public class MongoFileMetadataRepository implements MetadataRepository {
 
     @Override
     public Optional<FileMetadata> findByOwnerAndFilename(String ownerId, String filename) {
-        Query q = new Query(Criteria.where(OWNER_ID).is(ownerId).and(FILENAME).is(filename));
+        Query q = new Query(Criteria.where("ownerId").is(ownerId).and("filename").is(filename));
         FileMetadataDocument d = template.findOne(q, FileMetadataDocument.class);
         return Optional.ofNullable(d).map(this::toDomain);
     }
 
     @Override
     public Optional<FileMetadata> findByOwnerAndContentHash(String ownerId, String contentHash) {
-        Query q = new Query(Criteria.where(OWNER_ID).is(ownerId).and(CONTENT_HASH).is(contentHash));
+        Query q = new Query(Criteria.where("ownerId").is(ownerId).and("contentHash").is(contentHash));
         FileMetadataDocument d = template.findOne(q, FileMetadataDocument.class);
         return Optional.ofNullable(d).map(this::toDomain);
     }
 
     @Override
     public Optional<FileMetadata> findByLinkId(String linkId) {
-        Query q = new Query(Criteria.where(LINK_ID).is(linkId));
+        Query q = new Query(Criteria.where("linkId").is(linkId));
         FileMetadataDocument d = template.findOne(q, FileMetadataDocument.class);
         return Optional.ofNullable(d).map(this::toDomain);
     }
 
     @Override
     public void deleteById(String id) {
-        template.remove(new Query(Criteria.where(ID).is(id)), FileMetadataDocument.class);
+        template.remove(new Query(Criteria.where("_id").is(id)), FileMetadataDocument.class);
     }
 
     @Override
     public List<FileMetadata> listPublic(String tag, SortBy sortBy, SortDir sortDir, int page, int size) {
-        Criteria c = Criteria.where(VISIBILITY).is(Visibility.PUBLIC).and(STATUS).is(FileStatus.READY);
-        if (tag != null) c = c.and(TAGS_NORM).is(tag.toLowerCase(Locale.ROOT));
+        Criteria c = Criteria.where("visibility").is(Visibility.PUBLIC).and("status").is(FileStatus.READY);
+        if (tag != null) c = c.and("tagsNorm").is(tag.toLowerCase(Locale.ROOT));
 
         Query q = new Query(c);
         applySortAndPage(q, sortBy, sortDir, page, size);
-        return template.find(q, FileMetadataDocument.class).stream().map(this::toDomain).collect(Collectors.toList());
+
+        return template.find(q, FileMetadataDocument.class)
+                .stream().map(this::toDomain).toList();
     }
 
     @Override
     public List<FileMetadata> listByOwner(String ownerId, String tag, SortBy sortBy, SortDir sortDir, int page, int size) {
-        Criteria c = Criteria.where(OWNER_ID).is(ownerId);
-        if (tag != null) c = c.and(TAGS_NORM).is(tag.toLowerCase(Locale.ROOT));
+        Criteria c = Criteria.where("ownerId").is(ownerId);
+        if (tag != null) c = c.and("tagsNorm").is(tag.toLowerCase(Locale.ROOT));
 
         Query q = new Query(c);
         applySortAndPage(q, sortBy, sortDir, page, size);
-        return template.find(q, FileMetadataDocument.class).stream().map(this::toDomain).collect(Collectors.toList());
+
+        return template.find(q, FileMetadataDocument.class)
+                .stream().map(this::toDomain).toList();
     }
 
     private void applySortAndPage(Query q, SortBy sortBy, SortDir sortDir, int page, int size) {
         Sort.Direction dir = (sortDir == SortDir.DESC) ? Sort.Direction.DESC : Sort.Direction.ASC;
         String field = switch (sortBy) {
-            case FILENAME     -> FILENAME;
-            case UPLOAD_DATE  -> CREATED_AT;
-            case TAG          -> TAGS_NORM;
-            case CONTENT_TYPE -> CONTENT_TYPE;
-            case FILE_SIZE    -> SIZE;
+            case FILENAME     -> "filename";
+            case UPLOAD_DATE  -> "createdAt";
+            case TAG          -> "tagsNorm";
+            case CONTENT_TYPE -> "contentType";
+            case FILE_SIZE    -> "size";
         };
         q.with(PageRequest.of(page, size, Sort.by(dir, field)));
     }
@@ -118,7 +127,6 @@ public class MongoFileMetadataRepository implements MetadataRepository {
         d.setStatus(m.status());
         d.setCreatedAt(m.createdAt());
         d.setUpdatedAt(m.updatedAt());
-        // Note: no objectKey field — we use linkId as storage key.
         return d;
     }
 
